# RIA-ROS-Basics-with-Python-in-5-days

./: README.md
src/action_test/: CMakeLists.txt  package.xml
src/action_test/src/: ardrone_action_client.py  logger_example.py  no_wait_for_result_test.py  wait_for_result_test.py
src/actions_quiz/: CMakeLists.txt  package.xml
src/actions_quiz/launch/: action_custom_msg.launch
src/actions_quiz/src/: up_down_action.py
src/move_bb8_in_circle/: CMakeLists.txt  package.xml
src/move_bb8_in_circle/launch/: call_bb8_move_in_circle_service_server.launch
src/move_bb8_in_circle/src/: bb8_move_in_circle_service_client.py  bb8_move_in_circle_service_server.py
src/my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
src/my_custom_srv_msg_pkg/launch/: my_custom_service_server.launch  start_bb8_move_custom_service_server.launch
src/my_custom_srv_msg_pkg/src/: bb8_move_custom_service_server.py  custom_service_server.py
src/my_custom_srv_msg_pkg/srv/: MyCustomServiceMessage.srv
src/my_package/: CMakeLists.txt
src/my_package/launch/: my_package_launch_file.launch  simple_topic_publisher_launch_file.launch
src/my_package/src/: simple.py  simple_service_client.py  simple_topic_publisher.py  simple_topic_subscriber.py
src/services_quiz/: CMakeLists.txt  package.xml
src/services_quiz/launch/: call_bb8_move_in_square_custom_service_server.launch  start_bb8_move_custom_service_server.launch
src/services_quiz/src/: bb8_move_custom_service_client.py  bb8_move_custom_service_server.py  move_bb8.py
src/topics_quiz/: CMakeLists.txt
src/topics_quiz/launch/: topics_quiz.launch
src/topics_quiz/src/: my_script.py
src/unit_3_services/: CMakeLists.txt  package.xml
src/unit_3_services/launch/: my_robot_arm_demo.launch
src/unit_3_services/src/: exercise_3_1.py  simple_service_server.py
